--- a/src/main/resources/nopointers/GUI2.fxml
+++ b/src/main/resources/nopointers/GUI2.fxml
@@ -283,9 +283,17 @@
                      </font>
                   </TextArea>
                   <Button fx:id="hintsButton" layoutX="42.0" layoutY="550.0" mnemonicParsing="false" onAction="#hintsf" prefHeight="41.0" prefWidth="150.0" style="-fx-background-color: orange;" text="Hints">
-
+                     <opaqueInsets>
+                        <Insets />
+                     </opaqueInsets>
+                     <effect>
+                        <InnerShadow />
+                     </effect>
+                     <font>
+                        <Font name="Algerian" size="24.0" />
+                     </font>
+                  </Button>
                   <Button fx:id="screenshot" layoutX="48.0" layoutY="548.0" mnemonicParsing="false" onAction="#fileChooser" prefHeight="44.0" prefWidth="150.0" styleClass="option_button" stylesheets="@../StyleSheets/Option_Buttons.css" text="Screenshot">
-
                      <opaqueInsets>
                         <Insets />
                      </opaqueInsets>
